@@ -8,6 +8,7 @@ TinyWall Changelog
 - Firewall rule update without breaking existing connections
 - New XML-based updater system
 - Lightning-fast search for recognized applications
+- Increased service startup performance
 - Fix: Uninstaller now removes user-specific configuration files too
 - Fix: Custom ports are not applied to services
 
